--- a/app/src/main/res/layout/activity_edit_version.xml
+++ b/app/src/main/res/layout/activity_edit_version.xml
@@ -54,7 +54,7 @@
                 android:gravity="start"
                 android:text="@string/version"
                 android:textColor="@color/standard_text_dark_grey"
-                android:textSize="17dp" />
+                android:textSize="15sp" />
 
             <EditText
                 android:id="@+id/idEdtVersionName"
@@ -68,6 +68,7 @@
                 android:paddingLeft="10dp"
                 android:textColor="@color/highlighted_text_yellow"
                 android:textColorHint="@color/standard_text_dark_grey"
+                android:textSize="15sp"
                 android:textStyle="bold" />
 
             <TextView
@@ -81,7 +82,7 @@
                 android:gravity="start"
                 android:text="@string/description"
                 android:textColor="@color/standard_text_dark_grey"
-                android:textSize="17dp" />
+                android:textSize="15sp" />
 
             <EditText
                 android:id="@+id/idEdtVersionDescription"
@@ -101,6 +102,7 @@
                 android:paddingBottom="14dp"
                 android:textColor="@color/highlighted_text_yellow"
                 android:textColorHint="@color/standard_text_dark_grey"
+                android:textSize="15sp"
                 android:textStyle="bold" />
 
             <TextView
@@ -114,7 +116,7 @@
                 android:gravity="start"
                 android:text="@string/lyrics"
                 android:textColor="@color/standard_text_dark_grey"
-                android:textSize="17dp" />
+                android:textSize="15sp" />
 
             <EditText
                 android:id="@+id/idEdtVersionLyrics"
@@ -134,6 +136,7 @@
                 android:paddingBottom="14dp"
                 android:textColor="@color/highlighted_text_yellow"
                 android:textColorHint="@color/standard_text_dark_grey"
+                android:textSize="15sp"
                 android:textStyle="bold" />
 
             <TextView
@@ -146,7 +149,7 @@
                 android:gravity="start"
                 android:text="@string/images"
                 android:textColor="@color/standard_text_dark_grey"
-                android:textSize="17dp" />
+                android:textSize="15sp" />
 
             <LinearLayout
                 android:id="@+id/idLytImageContainer"
@@ -193,7 +196,7 @@
                 android:gravity="start"
                 android:text="@string/videos"
                 android:textColor="@color/standard_text_dark_grey"
-                android:textSize="17dp" />
+                android:textSize="15sp" />
 
             <LinearLayout
                 android:id="@+id/idLytVideoContainer"
@@ -240,7 +243,7 @@
                 android:gravity="start"
                 android:text="@string/audio"
                 android:textColor="@color/standard_text_dark_grey"
-                android:textSize="17dp" />
+                android:textSize="15sp" />
 
             <LinearLayout
                 android:id="@+id/idLytRecordingContainer"
